--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gh-pages": "^2.2.0",
     "jest-canvas-mock": "^2.3.1",
     "microbundle-crl": "^0.13.10",
+    "mini-css-extract-plugin": "^2.9.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react": "^16.13.1",
